; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_rtmp-stream.c_rtmp_stream_defaults.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_rtmp-stream.c_rtmp_stream_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPT_DROP_THRESHOLD = common dso_local global i32 0, align 4
@OPT_PFRAME_DROP_THRESHOLD = common dso_local global i32 0, align 4
@OPT_MAX_SHUTDOWN_TIME_SEC = common dso_local global i32 0, align 4
@OPT_BIND_IP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@OPT_NEWSOCKETLOOP_ENABLED = common dso_local global i32 0, align 4
@OPT_LOWLATENCY_ENABLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @rtmp_stream_defaults to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtmp_stream_defaults(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @OPT_DROP_THRESHOLD, align 4
  %5 = call i32 @obs_data_set_default_int(i32* %3, i32 %4, i32 700)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @OPT_PFRAME_DROP_THRESHOLD, align 4
  %8 = call i32 @obs_data_set_default_int(i32* %6, i32 %7, i32 900)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @OPT_MAX_SHUTDOWN_TIME_SEC, align 4
  %11 = call i32 @obs_data_set_default_int(i32* %9, i32 %10, i32 30)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @OPT_BIND_IP, align 4
  %14 = call i32 @obs_data_set_default_string(i32* %12, i32 %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @OPT_NEWSOCKETLOOP_ENABLED, align 4
  %17 = call i32 @obs_data_set_default_bool(i32* %15, i32 %16, i32 0)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @OPT_LOWLATENCY_ENABLED, align 4
  %20 = call i32 @obs_data_set_default_bool(i32* %18, i32 %19, i32 0)
  ret void
}

declare dso_local i32 @obs_data_set_default_int(i32*, i32, i32) #1

declare dso_local i32 @obs_data_set_default_string(i32*, i32, i8*) #1

declare dso_local i32 @obs_data_set_default_bool(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
